{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 11,
  "lineage": "43a65f18-6b69-1615-1d12-c5529513217a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Priv-Terra-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01d425805aef71788",
            "arn": "arn:aws:ec2:us-east-1:124876057204:instance/i-004c9e44d7f94f8b4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-004c9e44d7f94f8b4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Public_Subnet_EC2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04006ad4366b0df24",
            "private_dns": "ip-10-0-1-159.ec2.internal",
            "private_ip": "10.0.1.159",
            "public_dns": "ec2-54-166-191-20.compute-1.amazonaws.com",
            "public_ip": "54.166.191.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0ecf928e1e3b3add6",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0802732532c2a7e16",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06ed60c306b551bdf"
            ]
          },
          "dependencies": [
            "aws_security_group.terra-web-sg",
            "aws_subnet.terra-priv-sub1",
            "aws_vpc.terra-vpc",
            "data.aws_ami.amazon-lunix-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Terra-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01d425805aef71788",
            "arn": "arn:aws:ec2:us-east-1:124876057204:instance/i-070e3ee55df5b8b9a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-070e3ee55df5b8b9a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Public_Subnet_EC2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0034f7d8f24ffc9c2",
            "private_dns": "ip-10-0-0-58.ec2.internal",
            "private_ip": "10.0.0.58",
            "public_dns": "ec2-54-174-235-13.compute-1.amazonaws.com",
            "public_ip": "54.174.235.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0f18b21a42d16e65a",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0918e2c77a288362d",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06ed60c306b551bdf"
            ]
          },
          "dependencies": [
            "aws_security_group.terra-web-sg",
            "aws_subnet.terra-pub-sub1",
            "aws_vpc.terra-vpc",
            "data.aws_ami.amazon-lunix-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124876057204:internet-gateway/igw-06cc715d4277a7fcf",
            "id": "igw-06cc715d4277a7fcf",
            "owner_id": "124876057204",
            "vpc_id": "vpc-07f066c5aaa50707d"
          },
          "dependencies": [
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124876057204:route-table/rtb-051054a4138f99e7b",
            "id": "rtb-051054a4138f99e7b",
            "owner_id": "124876057204",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06cc715d4277a7fcf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07f066c5aaa50707d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terra-igw",
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065dbf5af12242b9b",
            "route_table_id": "rtb-051054a4138f99e7b",
            "subnet_id": "subnet-0918e2c77a288362d"
          },
          "dependencies": [
            "aws_internet_gateway.terra-igw",
            "aws_route_table.my_table",
            "aws_subnet.terra-pub-sub1",
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terra-web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124876057204:security-group/sg-06ed60c306b551bdf",
            "description": "Allow http,ssh,icmp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ed60c306b551bdf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my_web_security",
            "name_prefix": "",
            "owner_id": "124876057204",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mywebserver_sg"
            },
            "tags_all": {
              "Name": "mywebserver_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f066c5aaa50707d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-priv-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124876057204:subnet/subnet-0802732532c2a7e16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0802732532c2a7e16",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "124876057204",
            "tags": {
              "Name": "terra-pub-sub2"
            },
            "tags_all": {
              "Name": "terra-pub-sub2"
            },
            "vpc_id": "vpc-07f066c5aaa50707d"
          },
          "dependencies": [
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-pub-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124876057204:subnet/subnet-0918e2c77a288362d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0918e2c77a288362d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "124876057204",
            "tags": {
              "Name": "terra-pub-sub1"
            },
            "tags_all": {
              "Name": "terra-pub-sub1"
            },
            "vpc_id": "vpc-07f066c5aaa50707d"
          },
          "dependencies": [
            "aws_vpc.terra-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124876057204:vpc/vpc-07f066c5aaa50707d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ae16519372b13292",
            "default_route_table_id": "rtb-01bd4eea1a5352e29",
            "default_security_group_id": "sg-097d01a64151bc556",
            "dhcp_options_id": "dopt-ec0f5a96",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07f066c5aaa50707d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01bd4eea1a5352e29",
            "owner_id": "124876057204"
          }
        }
      ]
    }
  ]
}